# Pente-Game

./: .gitignore  LANCEMENT.md  README.md  start_full_game.sh
Client/: config.py  events.py  game.py  gui.py  main.py  network.py  oldgui.py  oldstates.py  sounds.py  states.py  theme.json  user.py
Client/sounds/: README_AUDIO.md
Server/: CMakeLists.txt  config.c  game.c  lobby.c  login.c  main.c  network.c  states.c
Server/headers/: config.h  game.h  lobby.h  login.h  network.h  states.h
